second header row added; individual column width removed due to bug in alignment with header; space added between search box and table

--- a/style.css
+++ b/style.css
@@ -60,18 +60,24 @@ a {
   color: #69b3a2;
 }
 
+.dataTables_wrapper .dt-buttons {
+  float:right;
+}
+
 .dataTables_wrapper  .dataTables_filter {
           width: 100%;
           float: none;
-          text-align: center; 
-          //align the Search box to center. left and right also valid 
+          text-align: left;
+          margin-bottom: 80px;
+          //align the Search box to center. left and right also valid
 }
 
    .dataTables_wrapper  .dataTables_filter {
           width: 100%;
           float: none;
-          text-align: center; 
-          //align the Search box to center. left and right also valid 
+          text-align: left;
+          margin-bottom: 80px;
+          //align the Search box to center. left and right also valid
    }
 
    input[type="search"] {
@@ -81,4 +87,4 @@ a {
         padding: 0;
         font-size: 10px;
         border: 1px solid #CCCCCC;
-  } 
+  }
